--- a/build.gradle
+++ b/build.gradle
@@ -38,11 +38,11 @@ gretty {
     // 'jetty7', 'jetty8', 'jetty9', 'jetty93', 'jetty94', 'tomcat7', 'tomcat8'
     servletContainer = 'jetty9'
     httpPort = 8080
-    contextPath = '/gradle-war'
+    contextPath = '/gradle-warfile'
 }
 
 war {
-    archiveName 'gradle-war.war'
+    archiveName 'gradle-warfile.war'
 }
 
 test {
